generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum Status {
  PANDING
  COMPLETE
}

model Presentation {
  id        Int      @id @default(autoincrement())
  title     String
  status    Status   @default(PANDING)
  createdAt DateTime @default(now())

  Slide        Slide[]
  session_uuid String  @map("session_uuid")
  session      Session @relation(fields: [session_uuid], references: [uuid])

  @@map("presentation")
}

model Slide {
  id    Int    @id @default(autoincrement())
  title String

  presentationId Int          @map("presentation_id")
  presentation   Presentation @relation(fields: [presentationId], references: [id])
  element        element[]

  @@map("slide")
}

model element {
  id      Int    @id @default(autoincrement())
  type    String
  content Json

  slideId Int   @map("slide_id")
  slide   Slide @relation(fields: [slideId], references: [id])

  @@map("element")
}

model Session {
  uuid      String   @id @default(uuid())
  title     String   @unique
  createdAt DateTime @default(now())

  Presentation Presentation[]

  @@map("session")
}
