Project cactus {
  database_type: 'mysql'
  Note: 'the database structure of the project cactus'
}

Table presentation {
  id int [pk]
  title string
  created_at date

  Note: 'the professors presentation table'
}

Table slide {
  id int
  presentation_id int [ref: > presentation.id]

  title string

  indexes {
    (id, presentation_id) [pk]
  }
  Note: 'the slides table, which contains the slides of the presentation'
}

Table element {
  id int [pk]
  slide_id int [ref: > slide.id]

  type string
  content json

  Note: 'the elements table, which contains the elements of the presentation the content is store the dot format.'

}

Table session {
  uuid string [pk]
  title string
  created_at date

  presentation_id int [ref: > presentation.id]

  Note: 'the session table, which contains the session uuid, it virtualizes the classroom'
}